--- a/package.json
+++ b/package.json
@@ -5,15 +5,22 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "migrate": "node node_modules/db-migrate/bin/db-migrate"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bookshelf": "^1.2.0",
+    "db-migrate": "^0.11.13",
+    "db-migrate-mysql": "^2.2.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "forms": "^1.3.2",
     "hbs": "^4.2.0",
+    "knex": "^2.5.1",
+    "mysql": "^2.18.1",
     "nodemon": "^3.0.1",
     "wax-on": "^1.2.2"
   }
