--- a/.env
+++ b/.env
@@ -2,3 +2,9 @@ CLOUDINARY_NAME=ddmpblr15
 CLOUDINARY_API_KEY=117871257461922
 CLOUDINARY_API_SECRET=x3O-LJhwDIVmM1TSowMeZyY9WUc
 CLOUDINARY_UPLOAD_PRESET=uploads
+DB_DRIVER=mysql
+DB_USER=foo
+DB_PASSWORD=bar
+DB_NAME=postershop
+DB_HOST=127.0.0.1
+SESSION_SECRET_KEY=meow123
