--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mysql": "^2.18.1",
     "nodemon": "^3.0.1",
     "session-file-store": "^1.5.0",
+    "stripe": "^13.4.0",
     "wax-on": "^1.2.2"
   }
 }
