--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bookshelf": "^1.2.0",
     "cloudinary": "^1.40.0",
     "connect-flash": "^0.1.1",
+    "cors": "^2.8.5",
     "csurf": "^1.11.0",
     "db-migrate": "^0.11.13",
     "db-migrate-mysql": "^2.2.0",
@@ -23,6 +24,7 @@
     "express-session": "^1.17.3",
     "forms": "^1.3.2",
     "hbs": "^4.2.0",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^2.5.1",
     "mysql": "^2.18.1",
     "nodemon": "^3.0.1",
